--- a/dev/wlp-gradle/subprojects/tasks.gradle
+++ b/dev/wlp-gradle/subprojects/tasks.gradle
@@ -26,24 +26,24 @@ if (parseBoolean(bnd.get('globalize', 'true'))) {
   task globalize {
     // Exclude messages from quotation validation if explicitly excluded via bnd.bnd
     def quotationExcludes = bnd.get('globalize.quotation.excludes')
-    def currentProject = project
+    def projectName = project.name
 
     ext.destinationDir = new File(buildDir, "src/${name}/java")
 
     inputs.files(fileTree(dir: project.file('resources'), include: '**/*.nlsprops')).ignoreEmptyDirectories().skipWhenEmpty()
     outputs.dir destinationDir
     doFirst {
-      currentProject.mkdir(destinationDir)
+      mkdir(destinationDir)
     }
     doLast {
       copy {
-        from currentProject.file('resources')
+        from file('resources')
         into destinationDir
         include '**/package-info.java'
       }
       nlsTaskdef(ant)
       ant.validate() {
-        fileset(dir: currentProject.file('resources'), includes: "**/*.nlsprops", excludes: "**/*_*.nlsprops")
+        fileset(dir: file('resources'), includes: "**/*.nlsprops", excludes: "**/*_*.nlsprops")
         completenessvalidator(messagesonly: "false")
         duplicatekeyvalidator()
         metadatavalidator()
@@ -64,16 +64,16 @@ if (parseBoolean(bnd.get('globalize', 'true'))) {
         contentvalidator(constraint: "disallowed", pattern: "\\b((WAS)|(TAM)|(WIM)|(WPS)|(eWAS)|(LUW)|(ND)|(MQSeries))\\b", loglevel: "warning", message: "product acronyms are disallowed")
         contentvalidator(constraint: "disallowed", pattern: "([A-Z0-9]{4,5})(\\d{4})([IWE]):\\S", loglevel: "error", message: "malformed message")
       }
-      ant.normalize(dest: new File(currentProject.buildDir, 'nlsbuild/normalized'), defaultencoding: "ISO-8859-1") {
-        fileset(dir: currentProject.file('resources'), includes: "**/*.nlsprops")
+      ant.normalize(dest: new File(buildDir, 'nlsbuild/normalized'), defaultencoding: "ISO-8859-1") {
+        fileset(dir: file('resources'), includes: "**/*.nlsprops")
         encodingtable(encodings: cnf.file('resources/EncodingTable.properties'))
         globmapper(from: "*.nlsprops", to: "*.normalized")
       }
-      ant.commonize(dest: new File(currentProject.buildDir, 'nlsbuild/normalized'), commonmessagefile: cnf.file('resources/nls/commonmessages.properties')) {
-        fileset(dir: new File(currentProject.buildDir, 'nlsbuild/normalized'), includes: "**/*.normalized")
+      ant.commonize(dest: new File(buildDir, 'nlsbuild/normalized'), commonmessagefile: cnf.file('resources/nls/commonmessages.properties')) {
+        fileset(dir: new File(buildDir, 'nlsbuild/normalized'), includes: "**/*.normalized")
       }
       ant.transform() {
-        fileset(dir: new File(currentProject.buildDir, 'nlsbuild/normalized'), includes: "**/*.normalized")
+        fileset(dir: new File(buildDir, 'nlsbuild/normalized'), includes: "**/*.normalized")
         javatransformer(dest: destinationDir) {
           keyfilter {
             exclude(name: "*.explanation")
@@ -86,9 +86,9 @@ if (parseBoolean(bnd.get('globalize', 'true'))) {
       // commonize and normalize that. Then generate
       // the tmsource for all languages (including the newly
       // generated english source)
-      File nlsbuildtemp = new File(currentProject.buildDir, 'nlsbuild/temp')
+      File nlsbuildtemp = new File(buildDir, 'nlsbuild/temp')
       copy {
-        from currentProject.file('resources')
+        from file('resources')
         into nlsbuildtemp
         include '**/*.nlsprops'
         exclude '**/*_??.nlsprops'
@@ -96,15 +96,15 @@ if (parseBoolean(bnd.get('globalize', 'true'))) {
         rename '(.*).nlsprops', '$1' + "_en.nlsprops"
       }
       // Existing languages first
-      ant.normalize(dest: new File(currentProject.buildDir, 'nlsbuild/normalizedxml'), defaultencoding: "ISO-8859-1") {
-        fileset(dir: currentProject.file('resources')) {
+      ant.normalize(dest: new File(buildDir, 'nlsbuild/normalizedxml'), defaultencoding: "ISO-8859-1") {
+        fileset(dir: file('resources')) {
           include(name: "**/*.nlsprops")
         }
         encodingtable(encodings: cnf.file('resources/EncodingTable.properties'))
         globmapper(from: "*.nlsprops", to: "*.normalized")
       }
       // And now english
-      ant.normalize(dest: new File(currentProject.buildDir, 'nlsbuild/normalizedxml'), defaultencoding: "ISO-8859-1") {
+      ant.normalize(dest: new File(buildDir, 'nlsbuild/normalizedxml'), defaultencoding: "ISO-8859-1") {
         fileset(dir: nlsbuildtemp) {
           include(name: "**/*_en.nlsprops")
         }
@@ -112,8 +112,8 @@ if (parseBoolean(bnd.get('globalize', 'true'))) {
         globmapper(from: "*.nlsprops", to: "*.normalized")
       }
 
-      ant.commonize(dest: new File(currentProject.buildDir, 'nlsbuild/normalizedxml'), commonmessagefile: cnf.file('resources/nls/commonmessages.properties')) {
-        fileset(dir: new File(currentProject.buildDir, 'nlsbuild/normalizedxml'), includes: "**/*.normalized")
+      ant.commonize(dest: new File(buildDir, 'nlsbuild/normalizedxml'), commonmessagefile: cnf.file('resources/nls/commonmessages.properties')) {
+        fileset(dir: new File(buildDir, 'nlsbuild/normalizedxml'), includes: "**/*.normalized")
         globmapper(from: "*.normalized", to: "*.commonized")
       }
 
@@ -122,8 +122,8 @@ if (parseBoolean(bnd.get('globalize', 'true'))) {
       // So instead of generating these files to the local project and doing a copy, directly generate the
       // files into the build.pii.package project.
       ant.transform() {
-        fileset(dir: new File(currentProject.buildDir, 'nlsbuild/normalizedxml'), includes: "**/*.commonized")
-        tmstransformer(dest: rootProject.file("build.pii.package/nlsxml/${currentProject.name}"))
+        fileset(dir: new File(buildDir, 'nlsbuild/normalizedxml'), includes: "**/*.commonized")
+        tmstransformer(dest: rootProject.file("build.pii.package/nlsxml/${projectName}"))
       }
     }
   }
@@ -303,7 +303,6 @@ if (bnd.get('publish.wlp.jar.suffix', 'lib').contains('api/ibm') || bnd.get('pub
   }
 
   task zipJavadoc(type: Zip) {
-    def currentProject = project
     dependsOn apiSpiJavadoc
     archiveFileName = bnd.get('Bundle-SymbolicName', project.name) + '.javadoc.zip'
     from new File(project.buildDir, "javadoc")
@@ -334,9 +333,9 @@ if (bnd.get('publish.wlp.jar.suffix', 'lib').contains('api/ibm') || bnd.get('pub
           }
         }
 
-        def initialJavadocZipName = currentProject.buildDir.path + '/distributions/' + bnd.get('Bundle-SymbolicName', project.name) + '.javadoc.zip'
+        def initialJavadocZipName = buildDir.path + '/distributions/' + bnd.get('Bundle-SymbolicName', project.name) + '.javadoc.zip'
 
-        def finalJavadocZipName = currentProject.buildDir.path + '/distributions/' + transformedSymbolicName + '.javadoc.zip'
+        def finalJavadocZipName = buildDir.path + '/distributions/' + transformedSymbolicName + '.javadoc.zip'
 
         File jakartaZipFile = new File(finalJavadocZipName)
         if (jakartaZipFile.exists()) {
