FAT/Infinispan: silence CWWKE0921W/CWWKE0912W in test servers to prevent RC=1 on stop; stabilize timeout tests (Defect 297649) (#33148)
Co-authored-by: Riya Arora <riyaarora@ibm.com>

--- a/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.server/bootstrap.properties
+++ b/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.server/bootstrap.properties
@@ -34,3 +34,4 @@ com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.session.*=all
 # org.infinispan.commons.util.uberjar.ManifestUberJarDuplicatedJarsWarner.lambda$isClasspathCorrectAsync$3(ManifestUberJarDuplicatedJarsWarner.java:79)
 # org.infinispan.commons.util.uberjar.ManifestUberJarDuplicatedJarsWarner$$Lambda$252.000000004F268420.get(Unknown Source)
 websphere.java.security.exempt=true
+WLP_LOGGING_MESSAGE_FILTER=CWWKE0921W=off,CWWKE0912W=off
