--- a/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.timeoutServerA/bootstrap.properties
+++ b/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.timeoutServerA/bootstrap.properties
@@ -16,3 +16,4 @@ com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.session.*=all
 # TODO java 2 security must remain disabled while Infinispan code lacks doPrivileged.
 # See reason in /com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.server/bootstrap.properties
 websphere.java.security.exempt=true
+WLP_LOGGING_MESSAGE_FILTER=CWWKE0921W=off,CWWKE0912W=off
