--- a/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.timeoutServerB/bootstrap.properties
+++ b/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.timeoutServerB/bootstrap.properties
@@ -12,3 +12,4 @@
 ###############################################################################
 bootstrap.include=../testports.properties
 com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.session.*=all
+WLP_LOGGING_MESSAGE_FILTER=CWWKE0921W=off,CWWKE0912W=off
