Increase DS lock timeout for JCA FAT These FAT tests either have DS logging enabled, which seems to result in an error in server logs when run on slower systems, or have encounted a similar error when run on slower systems. Although test methods pass, the error fails the fat.
Increase the lock timeout to avoid the error:

CWWKE0701E: bundle com.ibm.ws.transport.http:1.0.108.cl251220251026-1102 (115)[com.ibm.ws.http.internal.HttpEndpointImpl(251)] : Timeout waiting for reg change to complete registered

--- a/dev/com.ibm.ws.jca_fat_bvt.jms/publish/servers/com.ibm.ws.jca.bvt.jms/bootstrap.properties
+++ b/dev/com.ibm.ws.jca_fat_bvt.jms/publish/servers/com.ibm.ws.jca.bvt.jms/bootstrap.properties
@@ -2,4 +2,5 @@ bootstrap.include=../testports.properties
 com.ibm.ws.logging.trace.specification=*=info=enabled:WAS.j2c=all:concurrent=all:context=all:jeeMetadataContext=all:ClassloaderContext=all:TransactionContext=all:LogService=all
 com.ibm.ws.logging.max.file.size=0
 ds.loglevel=debug
+ds.lock.timeout.milliseconds=30000
 osgi.console=5678
