--- a/dev/com.ibm.ws.jca_fat_enterpriseApp/publish/servers/com.ibm.ws.jca.fat.enterpriseApp/bootstrap.properties
+++ b/dev/com.ibm.ws.jca_fat_enterpriseApp/publish/servers/com.ibm.ws.jca.fat.enterpriseApp/bootstrap.properties
@@ -2,4 +2,5 @@ com.ibm.ws.logging.trace.specification=*=info=enabled:RARInstall=all:com.ibm.ejs
 com.ibm.ws.logging.max.file.size=0
 osgi.console=5678
 ds.loglevel=debug
+ds.lock.timeout.milliseconds=30000
 bootstrap.include=../testports.properties
