--- a/dev/com.ibm.ws.jca.1.7_fat/publish/servers/com.ibm.ws.jca.fat/bootstrap.properties
+++ b/dev/com.ibm.ws.jca.1.7_fat/publish/servers/com.ibm.ws.jca.fat/bootstrap.properties
@@ -1,5 +1,6 @@
 com.ibm.ws.logging.trace.specification=*=event=enabled:logservice=all:rarInstall=all:WAS.j2c=all:test=all:web.*=all:container.service=all:app.manager=all:com.ibm.ws.injectionengine.*=all:com.ibm.ws.threadContext.*=all
 
 osgi.console=5678
+ds.lock.timeout.milliseconds=30000
 
 bootstrap.include=../testports.properties
