--- a/dev/com.ibm.ws.jca_fat_dynamicConfig/publish/servers/com.ibm.ws.jca.fat.dynamicConfig/bootstrap.properties
+++ b/dev/com.ibm.ws.jca_fat_dynamicConfig/publish/servers/com.ibm.ws.jca.fat.dynamicConfig/bootstrap.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2013, 2020 IBM Corporation and others.
+# Copyright (c) 2013, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -20,6 +20,7 @@ com.ibm.ws.container.service.app.recycle=all:\
 app.manager=all
 com.ibm.ws.logging.max.file.size=0
 ds.loglevel=debug
+ds.lock.timeout.milliseconds=30000
 osgi.console=5678
 
 bootstrap.include=../testports.properties
