--- a/dev/com.ibm.ws.jca_fat_example_anno/publish/servers/jca.fat.example.anno/bootstrap.properties
+++ b/dev/com.ibm.ws.jca_fat_example_anno/publish/servers/jca.fat.example.anno/bootstrap.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2017 IBM Corporation and others.
+# Copyright (c) 2017, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -14,4 +14,5 @@ com.ibm.ws.logging.trace.specification=*=info=enabled:rarInstall=all:WAS.j2c=all
 com.ibm.ws.logging.max.file.size=0
 osgi.console=5678
 ds.loglevel=debug
+ds.lock.timeout.milliseconds=30000
 bootstrap.include=../testports.properties
