--- a/dev/com.ibm.ws.jca_fat_regr/publish/servers/com.ibm.ws.jca.fat.regr/bootstrap.properties
+++ b/dev/com.ibm.ws.jca_fat_regr/publish/servers/com.ibm.ws.jca.fat.regr/bootstrap.properties
@@ -1,5 +1,6 @@
 com.ibm.ws.logging.trace.specification=*=event=enabled:logservice=all:rarInstall=all:WAS.j2c=all:test=all:web.*=all:app.manager=all:com.ibm.adapter.*=all:com.ibm.ws.security.*=all
 com.ibm.ws.logging.max.file.size=0
 osgi.console=5678
+ds.lock.timeout.milliseconds=30000
 
 bootstrap.include=../testports.properties
